import React from 'react';
import Value from '..';

describe('<Value />', () => {
  it('should render withouth a problem', () => {
    const { container } = render(<Value>0</Value>);
    expect(container).toMatchSnapshot();
  });

  it('should render as negative', () => {
    const { container } = render(<Value negative>-10</Value>);
    expect(container).toMatchSnapshot();
  });

  it('should render as postive', () => {
    const { container } = render(<Value positive>+10</Value>);
    expect(container).toMatchSnapshot();
  });
});
