// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Value /> should render as negative 1`] = `
.c0 {
  color: hsl(213,17%,20%);
  color: hsl(6,79%,65%);
}

<div>
  <div
    class="c0"
  >
    -10
  </div>
</div>
`;

exports[`<Value /> should render as postive 1`] = `
.c0 {
  color: hsl(213,17%,20%);
  color: hsl(89,53%,52%);
}

<div>
  <div
    class="c0"
  >
    +10
  </div>
</div>
`;

exports[`<Value /> should render withouth a problem 1`] = `
.c0 {
  color: hsl(213,17%,20%);
}

<div>
  <div
    class="c0"
  >
    0
  </div>
</div>
`;
